# body-language-detector

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: affine.hpp.AFF11C12AFEAE0D5.idx  all_indices.h.99B09A2672ED02BB.idx  allocator.h.03C160BFEF8D76D7.idx  any.h.D0669FDEFC14821C.idx  app.cpp.AF88C32AAF5831D8.idx  app.cpp.E6A0DF1BCA9826F3.idx  app.h.58BE8C1A6CE88E5A.idx  app.h.DEB0CD2DAFBC541C.idx  aruco_board.hpp.9EC7B806A02DD4F8.idx  aruco_detector.hpp.D574D501E7982363.idx  aruco_dictionary.hpp.82F52DC6E2FA2CCB.idx  async.hpp.5BD62B4BB35F3715.idx  autotuned_index.h.690F028F315F2E16.idx  background_segm.hpp.2509BD9763F584C1.idx  barcode.hpp.A68932A003E3C7D7.idx  base.hpp.4E2263A20B2F3768.idx  blenders.hpp.AC2D45992E3D5E6B.idx  bufferpool.hpp.403F7B7E27A3B030.idx  calib3d.hpp.AEAF97FD881562B1.idx  camera.hpp.D30D2DBEFF4618B9.idx  charuco_detector.hpp.D4CC8AD884E9DBA0.idx  check.hpp.55D4863817CFD54C.idx  composite_index.h.7769EFB57711E787.idx  config.h.BCC83F63F5D52269.idx  core.hpp.6A3F87E2E480470C.idx  cuda.hpp.368AB1EA257E16EC.idx  cuda.inl.hpp.A6F8419AE893EA79.idx  cuda_types.hpp.617921064A343E85.idx  cv_cpu_dispatch.h.D7C14AB035E8F787.idx  cvdef.h.2358645AEA47DEAC.idx  cvstd.hpp.0146947ACDB62936.idx  cvstd.inl.hpp.DCDC0B24B3F6749A.idx  cvstd_wrapper.hpp.6F38F6E7D0B6900E.idx  defines.h.CABD0F6451378E06.idx  detection_based_tracker.hpp.719FDEA3A1E5A132.idx  detectors.cpp.230808133E9CC562.idx  detectors.cpp.C054C086368DDF74.idx  detectors.h.46958AF5F857A4EC.idx  detectors.h.B6C3FB5399A8EF2A.idx  dict.hpp.0CE1E19B3D1BA467.idx  (+89 more)
src/: app.cpp  app.h  detectors.cpp  detectors.h  main.cpp  pose_runner.cpp  pose_runner.h
testScript/: CMakeLists.txt  graph_1.onnx  graph_with_unused_value_info.onnx  minimal.cpp  model_x.onnx
testScript/.cache/clangd/index/: minimal.cpp.1BADC3971DB66A32.idx
